--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,3 +1,12 @@
+body{
+    background-color:#f6f6f6;
+}
+
+.navbar-inner {
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
 #col-top {width:960px; height:5px; margin-top:15px; background:url("../img/col-top.gif") 0 0 no-repeat; font-size:0; line-height:0; overflow:hidden;}
 #col-bottom {width:960px; height:5px; margin-bottom:15px; background:url("../img/col-bottom.gif") 0 0 no-repeat; font-size:0; line-height:0; overflow:hidden;}
 
@@ -33,4 +42,69 @@
 
 .listing-item,.listing-seperator {
   list-style-type:none;
+}
+
+.item img{
+    width: 640px;
+    height:350px;
+}  
+
+.carousel {
+  margin-bottom: 0px;
+  margin-left:-20px;
+  line-height: 1;
+  
+  -webkit-border-radius:6px;
+	-moz-border-radius:6px;
+	border-radius:6px;
+}
+
+.carousel-indicators {
+  top: 320px;
+  right: -60px
+}
+
+.carousel-caption {
+  top:0px;
+  right: 0px;
+  left: 640px;
+}
+
+.carousel-inner{
+    width:980px
+}
+
+.white-panel {
+	background-color:#fff;
+	border:1px solid #dadada;
+	padding:0px;
+	margin-bottom:40px;
+	color:#333;
+	-webkit-border-radius:6px;
+	-moz-border-radius:6px;
+	border-radius:6px;
+	-webkit-box-shadow:0 1px 2px rgba(0,0,0,.075);
+	-moz-box-shadow:0 1px 2px rgba(0,0,0,.075);
+	box-shadow:0 1px 2px rgba(0,0,0,.075);
+}
+
+.white-panel h2 {
+	margin:0px 0px 30px 0px;
+  text-align:center;
+  margin-top:20px;
+}
+
+.hero-box{
+
+ height: 300px;
+
+}
+
+
+.no-right{
+  margin-right:0;  
+}
+
+.footer{
+
 }
