--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -2,6 +2,59 @@ body{
     background-color:#f6f6f6;
 }
 
+ul {
+    list-style: disc outside none;
+}
+
+.header {
+    margin-bottom: 0px;
+    display: block;
+}
+
+.header {
+    background-color: rgb(37, 37, 37);
+    box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.5);
+    padding: 0px 20px;
+    position: relative;
+    z-index: 2;
+}
+
+
+h1.logo img{
+    height:50px;
+}
+
+
+.menu .menu-list {
+    
+    list-style-type: none;
+    float: right;
+    padding-top: 20px;
+    
+    list-style-type: none;
+}
+
+.menu .menu-item {
+    display: inline;
+    font-size:16px;
+    font-family: "微软雅黑", Microsoft YaHei, tahoma,serif;
+    margin-left: 30px;
+}
+
+.menu .menu-item a {
+    color: rgb(255, 255, 255);
+}
+
+a:focus {
+    outline: thin dotted rgb(51, 51, 51);
+    outline-offset: -2px;
+}
+
+
+.menu .highlight-item a {
+    color: rgb(112, 203, 0);
+}
+
 .navbar-inner {
   padding-right: 0px;
   padding-left: 0px;
@@ -134,7 +187,7 @@ body{
 	background-color:#fff;
 	border:1px solid #dadada;
 	padding:0px;
-	margin-bottom:40px;
+	margin-bottom:20px;
 	color:#333;
 	-webkit-border-radius:6px;
 	-moz-border-radius:6px;
