--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -9,9 +9,7 @@ ul {
 .header {
     margin-bottom: 0px;
     display: block;
-}
 
-.header {
     background-color: rgb(37, 37, 37);
     box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.5);
     padding: 0px 20px;
@@ -187,12 +185,11 @@ a:focus {
 	background-color:#fff;
 	border:1px solid #dadada;
 	padding:0px;
-	margin-bottom:20px;
-	color:#333;
-	-webkit-border-radius:6px;
-	-moz-border-radius:6px;
-	border-radius:6px;
-	-webkit-box-shadow:0 1px 2px rgba(0,0,0,.075);
+	color:#333;	
+}
+
+.box-shadow{
+  -webkit-box-shadow:0 1px 2px rgba(0,0,0,.075);
 	-moz-box-shadow:0 1px 2px rgba(0,0,0,.075);
 	box-shadow:0 1px 2px rgba(0,0,0,.075);
 }
@@ -201,6 +198,14 @@ a:focus {
 	margin:0px 0px 30px 0px;
   text-align:center;
   margin-top:20px;
+}
+
+#top{  
+  margin-bottom:20px;
+    
+  -webkit-border-radius:0 0 6px 6px;
+	-moz-border-radius:0 0 6px 6px;
+	border-radius:0 0 6px 6px;  
 }
 
 .hero-box{
