--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -7,7 +7,7 @@ ul {
 }
 
 .header {
-    margin-bottom: 0px;
+    margin-bottom: 20px;
     display: block;
 
     background-color: rgb(37, 37, 37);
@@ -29,18 +29,15 @@ h1.logo img{
     
     list-style-type: none;
     float: right;
-    padding-top: 20px;
-    
+    padding-top: 20px;    
     list-style-type: none;
 }
 
 .menu .menu-item {
     display: inline;
     font-size:16px;
-    font-family: "微软雅黑", Microsoft YaHei, tahoma,serif;
-    margin-left: 20px;
-    
-    margin-right: 10px;
+    font-family: "微软雅黑", Microsoft YaHei, tahoma,serif;    
+    margin-right: 20px;
 }
 
 .menu .menu-item a {
@@ -100,7 +97,7 @@ a:focus {
   color:#999;
 }
 
-.listing-item,.listing-seperator {
+.listing-item,.listing-seperator{
   list-style-type:none;
 }
 
@@ -197,30 +194,75 @@ a:focus {
 	color:#333;	
 }
 
-.box-shadow{
-  -webkit-box-shadow:0 1px 2px rgba(0,0,0,.075);
-	-moz-box-shadow:0 1px 2px rgba(0,0,0,.075);
-	box-shadow:0 1px 2px rgba(0,0,0,.075);
-}
-
 .white-panel h2 {
 	margin:0px 0px 30px 0px;
   text-align:center;
   margin-top:20px;
 }
 
-#top{  
-  margin-bottom:20px;
+.grey-panel{
+  background-color:#efefef;
+  border-top:0;
+  border-left:1px solid #dadada;
+  border-right:1px solid #dadada;
+  border-bottom:1px solid #dadada;
+  padding:0px;
+  color:#333;	
+}
+
+.box-shadow{
+  -webkit-box-shadow:0 1px 2px rgba(0,0,0,.075);
+	-moz-box-shadow:0 1px 2px rgba(0,0,0,.075);
+	box-shadow:0 1px 2px rgba(0,0,0,.075);
+}
+
+#top{    
+  padding: 0;
+}
+
+#top > div{  
+  -webkit-border-radius:6px 6px 0 0 ;
+	-moz-border-radius:6px 6px 0 0;
+	border-radius: 6px 6px 0 0; 
   
+}
+
+.radius6{
+  -webkit-border-radius:6px;
+	-moz-border-radius:6px;
+	border-radius:6px;  
+}
+
+#intro h3{
+    text-align: center;
+    font-size: 23px;
+}
+
+#marketing{
+  margin-bottom:20px;
+}
+
+#marketing > div{
   -webkit-border-radius:0 0 6px 6px;
 	-moz-border-radius:0 0 6px 6px;
-	border-radius:0 0 6px 6px;  
+	border-radius:0 0 6px 6px; 
+
+}
+
+#main{ 
+  margin-bottom:20px
+}
+
+#marketing ul{
+  list-style-type: none;
+}
+
+#marketing h3{
+    text-align:center;
 }
 
 .hero-box{
-
  height: 300px;
-
 }
 
 
@@ -229,13 +271,18 @@ a:focus {
 }
 
 .footer{
- margin-top:-20px;
  background-color:#333333;
  color:#ffffff;
+ margin-top:0px
 }
 
 #foot{
   padding-top:40px;  
+}
+
+#foot p{
+    font-size:13px;
+    font-family: "微软雅黑", Microsoft YaHei, tahoma,serif;    
 }
 
 #go2top a{
@@ -246,3 +293,49 @@ a:focus {
 #go2top a:hover{
   color:#FF0  
 }
+
+.margin-bottom-20{
+  margin-bottom: 20px
+}
+
+.margin-bottom-40{
+  margin-bottom: 40px
+}
+
+/* post模板 */
+
+#content{
+  padding: 0px;
+}
+
+.article{
+  margin: 10px
+}
+
+/********* pagination  **********/
+
+.pagination a {
+    text-decoration: none;
+	border: 1px solid #AAE;
+	color: #15B;
+}
+
+.pagination a, .pagination span {
+    display: inline-block;
+    padding: 0.1em 0.4em;
+    margin-right: 5px;
+	margin-bottom: 5px;
+}
+
+.pagination .current {
+    background: #26B;
+    color: #fff;
+	border: 1px solid #AAE;
+}
+
+.pagination .current.prev, .pagination .current.next{
+	color:#999;
+	border-color:#999;
+	background:#fff;
+}
+/****************/
