--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,7 +99,7 @@
     <script src="{% if site.base_url%}{{site.base_url}}{% endif %}/assets/js/bootstrap-carousel.js"></script>
     <script src="{% if site.base_url%}{{site.base_url}}{% endif %}/assets/js/bootstrap-typeahead.js"></script>
     
-   {% for js in page.js %}<script src="{{ js }}" type="text/javascript" charset="utf-8"></script>{% endfor %}
+   {% for js in page.js %}<script src="{% if site.base_url%}{{site.base_url}}{% endif %}{{ js }}" type="text/javascript" charset="utf-8"></script>{% endfor %}
 
     <script src="{% if site.base_url%}{{site.base_url}}{% endif %}/assets/js/holder/holder.js"></script>
         <script>
