--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,18 +28,18 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{site.base_url}}/assets/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{site.base_url}}/assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="{{site.base_url}}/assets/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="./{{site.base_url}}/assets/ico/favicon.png">
+    <link rel="shortcut icon" href="{{site.base_url}}/assets/ico/favicon.png">
   </head>
 
   <body>
 
     <!-- HEADER
     ================================================== -->
- <header class="header">
+ <div class="header">
       <div class="container">
           <div class="row">
               <div class="span3">
-                  <h1 class="logo"><a href="/"><img src="{{site.base_url}}/assets/img/logo-small.png" alt="SupStat"></a></h1>
+                  <h1 class="logo"><a href="{{site.base_url}}/"><img src="{{site.base_url}}/assets/img/logo-small.png" alt="SupStat"></a></h1>
               </div>
 
              <div class="menu span9 pull-right">
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-</header>
+</div>
         
 <div class="container">   
   
