--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
 
     <!-- HEADER
     ================================================== -->
+<div class="page-content-wrapper">
  <div class="header">
       <div class="container">
           <div class="row">
@@ -42,7 +43,7 @@
                   <h1 class="logo"><a href="{{site.base_url}}/"><img src="{{site.base_url}}/assets/img/logo-small.png" alt="SupStat"></a></h1>
               </div>
 
-             <div class="menu span9 pull-right">
+             <div class="menu span9">
                 <ul class="menu-list">                            
                     <li class="menu-item">
                         <a href="{{site.base_url}}/">主页</a>
@@ -56,7 +57,7 @@
                     <li class="menu-item">
                         <a href="{{site.base_url}}/blog">公司博客</a>
                     </li>
-                    <li class="menu-item highlight-item">
+                    <li class="menu-item">
                         <a href="{{site.base_url}}/contact">联系我们</a>
                     </li>
                 </ul>
@@ -79,7 +80,7 @@
         <p>&copy; 2013 北京数博思达信息科技有限公司</p>
    </div>
 </div>
-
+</div>
 
     <!-- Le javascript
     ================================================== -->
