--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -2,22 +2,71 @@ body{
     background-color:#333333;
 }
 
-ul {
-    list-style: disc outside none;
+#top{
+  background-color:#F1F6D8;
 }
 
+/* Main marketing message and sign up button */
+.jumbotron {
+  margin: 50px 0;
+  text-align: center;
+}
+.jumbotron h1 {
+  font-size: 70px;
+  line-height: 1;
+}
+.jumbotron .lead {
+  font-size: 24px;
+  line-height: 1.25;
+}
+.jumbotron .btn {
+  font-size: 21px;
+  padding: 14px 24px;
+}
+
+#learn-r{
+    background-color:#D2D0D0;
+}
+
+#learn-r p{margin: 10px}
+#learn-r h3{text-align: center}
+
+#biz{
+    background-color:#E4E3E3;
+}
+
+div#use_cases{
+  width: 100%;
+}
+#biz p{margin:10px}
+#biz .use-cases{margin:0 10px;height:auto;display:block;overflow: auto;}
+#biz .use-cases .item   { float: left; width: 33%; padding-right: 20px; margin-bottom: 10px; overflow: auto; }
+#biz .use-cases .item a  { text-decoration:none;  }
+#biz .use-cases .thumb img { width: 100%; border: 5px solid #fff;  }
+#biz .use-cases .thumb img  { }
+#biz .posts       { color: #3d7215; margin: 20px 20px 170px 40px; padding-left: 10px; }
+#biz .posts h3    { color: #fff; margin-bottom: 10px; }
+#biz .posts a      { color: #463e38; text-decoration: none; font-weight:bold;}
+#biz .posts a:hover   { text-decoration:underline; }
+#biz .posts .post       { margin-bottom: 15px }
+#biz .posts .date        { font-size: 75% }
+      
 .page-content-wrapper{
   min-height: 100%;
   height: auto !important;
-  min-width: 960px;
-  margin: 0px auto 0px; 
+  min-width: 1000px;
+  margin: 0px auto; 
   background-color:#f6f6f6;
 }
 
-.header {
-    margin-bottom: 20px;
-    display: block;
+.div-content-wrapper{
+  margin: 10px; 
+}
 
+.header {
+    /* margin-bottom: 20px; */
+    display: block;
+    margin:0 auto;
     background-color: #252525;
     position: relative;
     z-index: 2;
@@ -33,35 +82,14 @@ ul {
     width: 100%;
 }
 
+h1.logo{
+  margin: 10px 0px;
+}
 
 h1.logo img{
     height:50px;
 }
 
-
-.menu .menu-list {
-    
-    list-style-type: none;
-    float: right;
-    padding-top: 20px;    
-    list-style-type: none;
-}
-
-.menu .menu-item {
-    display: inline;
-    font-size:16px;
-    font-family: "微软雅黑", Microsoft YaHei, tahoma,serif;    
-    margin-right: 20px;
-}
-
-.menu .menu-item a {
-    color: rgb(128, 137, 142);
-    text-decoration: none;
-}
-
-.menu .menu-item a:hover {
-    color: #ffffff;
-}
 
 a:focus {
     outline: thin dotted rgb(51, 51, 51);
@@ -78,51 +106,10 @@ a:focus {
   padding-left: 0px;
 }
 
-#col-top {width:960px; height:5px; margin-top:15px; background:url("../img/col-top.gif") 0 0 no-repeat; font-size:0; line-height:0; overflow:hidden;}
-#col-bottom {width:960px; height:5px; margin-bottom:15px; background:url("../img/col-bottom.gif") 0 0 no-repeat; font-size:0; line-height:0; overflow:hidden;}
-
-#col {position:relative; padding:0px 30px 0px 20px; background:url("../img/col.gif") 0 0 repeat-y;}
-
-#col-top, #col-bottom, #col {background-color:#F5F5F5;}
-
-#col { height: 327px; position: relative; }
-#col .slider-nav a { display: block; width: 18px; height: 49px; font-size: 0; line-height: 0; text-indent: -6000px; position: absolute; top: 130px; }
-#col .slider-nav a.prev { left: 0; background: url(../img/button-prev.gif); }
-#col .slider-nav a.next { right: 0; background: url(../img/button-next.gif); }
-
-#slider { height: 327px; }
-#slider .jcarousel-clip { height: 327px; width: 910px; position: relative; overflow: hidden; }
-#slider .slide-image { float: right; display: inline; }
-#slider .slide-info { float: left; display: inline; width: 420px; padding-top: 23px; }
-#slider .slide-info p { padding-bottom: 8px; }
-#slider ul { width: 910px; height: 327px; position: relative; overflow: hidden; }
-#slider ul li { list-style-type: none; float: left; display: inline; height: 267px; width: 770px; padding: 56px 80px 4px 60px; position: relative; overflow: hidden; }
-.button-more { display: block; width: 120px; height: 29px; font-size: 0; line-height: 0; text-indent: -4000px; background: url(../img/button-more.png) no-repeat 0 0; }
-.button-more-min { display: block; width: 110px; height: 29px; font-size: 0; line-height: 0; text-indent: -4000px; background: url(../img/button-more.png) no-repeat 0 0; }
-.listing-item a, .listing-item a:hover{              
-  border-bottom:0px;
-  color:#090;
-  padding:.2em 1em;
-}
-
-.listing-item a:hover{color:#000;}
-
-.listing-item time {
-  color:#999;
-}
-
-.listing-item,.listing-seperator{
-  list-style-type:none;
-}
-
-.item img{
-    width: 400px;
-    height:300px;
-}  
 
 #slider-show{
     margin-top:40px;
-    margin-bottom:40px;
+    margin-bottom:20px;
 }  
 
 .carousel {
@@ -157,10 +144,16 @@ a:focus {
     text-align: center;
 }
 
-.featured{
-    height:170px;
+#featured{
     margin-bottom:20px
 }
+
+#featured h3{
+  font-family: Arial, Helvetica, sans-serif; font-size: 16px; padding-bottom: 0; color: #000000; text-transform: uppercase; text-align:center; text-shadow: 0px 1px 1px #000000;
+}
+
+#featured p { padding-bottom:15px; color: #999999; margin: 10px; /*text-shadow: 0px 1px 1px #000000; */}
+#featured a { color: #ffffff; text-shadow: 0px 1px 1px #000; font-weight: bold; }
 
 .carousel-inner{
     width:780px
@@ -230,16 +223,9 @@ a:focus {
 	box-shadow:0 1px 2px rgba(0,0,0,.075);
 }
 
-#top{    
-  padding: 0;
-}
 
-#top > div{  
-  -webkit-border-radius:6px 6px 0 0 ;
-	-moz-border-radius:6px 6px 0 0;
-	border-radius: 6px 6px 0 0; 
-  
-}
+
+
 
 .radius6{
   -webkit-border-radius:6px;
@@ -250,6 +236,7 @@ a:focus {
 #intro h3{
     text-align: center;
     font-size: 23px;
+    margin-bottom:10px
 }
 
 #marketing{
@@ -264,6 +251,7 @@ a:focus {
 }
 
 #main{ 
+  padding: 0;
   margin-bottom:20px
 }
 
@@ -291,7 +279,7 @@ a:focus {
 }
 
 #foot{
-  padding-top:40px;  
+  padding-top:20px;  
 }
 
 #foot p{
@@ -308,13 +296,6 @@ a:focus {
   color:#FF0  
 }
 
-.margin-bottom-20{
-  margin-bottom: 20px
-}
-
-.margin-bottom-40{
-  margin-bottom: 40px
-}
 
 /******* post模板 *******/
 
@@ -322,14 +303,14 @@ a:focus {
   padding: 0px;
 }
 
-.article{
-  margin: 10px
+.article-content-wrapper{
+  margin: 40px 40px 40px 40px;
 }
 
 /********* pagination  **********/
 
 .pagination a {
-    text-decoration: none;
+  text-decoration: none;
 	border: 1px solid #AAE;
 	color: #15B;
 }
@@ -353,3 +334,161 @@ a:focus {
 	background:#fff;
 }
 /****************/
+
+.clearDiv {
+    clear: both;
+}
+
+.page-navigation{
+  width:90%;
+  margin:10px auto;
+  height:25px;
+  text-align: center;
+}
+
+.page-navigation>ul{
+    margin: 0px;
+}
+
+.deco-line {
+    background: url("../img/long-deco-line.png") no-repeat scroll center center transparent; 
+    height: 26px;
+    width: 100%;   
+}
+
+#scrollUp {
+  bottom: 60px;
+  right: 60px;
+  height: 35px;  /* Height of image */
+  width: 35px; /* Width of image */
+  background: url("../img/top.png") no-repeat;
+}
+
+.article p, .entry p{
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+#btn-row p, #foot p{
+  margin-bottom:10px;
+}
+
+/* 在文章中，应该还原 ul 和 ol 的样式 */
+.post ul, .marketing ul{
+	margin-left: 1.3em;
+	list-style: disc;
+}
+.post ol, .marketing ol{
+	list-style: decimal;
+	margin-left: 1.9em;
+}
+.post li ul, .post li ol, .post ul ul, .post ul ol, .post ol ul, .post ol ol {
+	margin-top: 0;
+	margin-bottom: 0;
+	margin-left: 2em;
+}
+.post li ul, .post ul ul, .post ol ul {
+	list-style: circle;
+}
+
+/* 同 ul/ol，在文章中应用 table 基本格式 */
+.post table th, .post table td, .post table th, .post  caption{
+	border: 1px solid #ddd;
+	padding: 5px 10px;
+}
+.post table th, .post table th {
+	background: #fbfbfb;
+}
+.post table thead th, .post thead th {
+	background: #f1f1f1;
+}
+.post table .caption {
+    border-bottom:none;
+}
+
+/**** About Team Members *******/
+
+ .member {
+    clear: both; }
+     .member .info {
+      float: left;
+      width: 580px; }
+     .member h4 {
+      margin: 0 0 4px 0;
+      font-weight: 600; }
+     .member p {
+      margin-bottom: 0; }
+     .member span.title {
+      color: #999999;
+      font-size: 85%;
+      padding-left: 4px; }
+     .member a.readmore {
+      font-weight: 600; }
+  
+   .member > * {
+    margin-bottom: 24px; 
+}
+
+img.avatar {
+  display: block;
+  float: left;
+  width: 80px;
+  height: 80px;
+  margin-right: 12px;
+  margin-bottom: 2px;
+  box-shadow: 1px 1px 3px rgba(40, 40, 40, 0.6);
+}
+/***********/
+
+
+.nav-tabs > .active > a,
+.nav-tabs > .active > a:hover,
+.nav-tabs > .active > a:focus {
+  background-color: #f6f6f6;
+}
+
+/*************/
+#social {text-align:left; margin-bottom:40px; }
+#social h3 { font-size:14px; }
+#social .link{margin-bottom:20px;}
+#social .link .twitter { background: url(../ico/ico-twitter.png) no-repeat left center; padding-left:40px; display:block; }
+#social .link .weibo { background: url(../ico/ico-weibo.png) no-repeat left center; padding-left:40px; display:block; }
+#social .link .facebook { background: url(../ico/ico-facebook.png) no-repeat left center; padding-left:40px; display:block; }
+#social .link .linkedin { background: url(../ico/ico-linkedin.png) no-repeat left center; padding-left:40px; display:block; }
+#social .link .github { background: url(../ico/ico-github.png) no-repeat left center; padding-left:40px; display:block; }
+#social .link .contact { background: url(../ico/ico-contact.png) no-repeat left center; padding-left:40px; display:block; }
+#social .link .subscribe { background: url(../ico/ico-subscribe.png) no-repeat left center; padding-left:40px; display:block; }
+#social .last { margin-right:0;}
+#social .link img { vertical-align: middle; }
+#social .link a { padding-left:3px; color:#555; text-decoration: none; font-weight: bold; line-height: 30px; }
+#social .link a:hover { opacity:0.85; }
+
+/********/
+.margin-top-20{
+  margin-top: 20px
+}
+
+.margin-bottom-10{
+  margin-bottom: 10px
+}
+
+.margin-bottom-20{
+  margin-bottom: 20px
+}
+
+.margin-bottom-40{
+  margin-bottom: 40px
+}
+
+.margin-left-10{
+  margin-left: 10px
+}
+
+.margin-left-20{
+  margin-left: 20px
+}
+
+.color-red{
+  color:#DA590F;
+}
+
