--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,24 +11,26 @@
     <link href="{{site.base_url}}/assets/css/bootstrap.css" rel="stylesheet">
     <!-- <link href="{{site.base_url}}/assets/css/typo.css" rel="stylesheet"> -->
     <script src="{{site.base_url}}/assets/js/jquery.js"></script>
-    <link type="text/css" href="{{site.base_url}}/assets/css/menu.css" rel="stylesheet" />
-    <script type="text/javascript" src="{{site.base_url}}/assets/js/menu.js"></script>
+    <!-- <link type="text/css" href="{{site.base_url}}/assets/css/menu.css" rel="stylesheet" /> 
+    <script type="text/javascript" src="{{site.base_url}}/assets/js/menu.js"></script> -->
  
+  
+    
+    <link href="{{site.base_url}}/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="{{site.base_url}}/assets/css/layout-responsive.css" rel="stylesheet">
+    <link href="{{site.base_url}}/assets/css/layout.css" rel="stylesheet">
   <style type="text/css">
 
       /* Custom container */
       .container {
         margin: 0 auto;
         max-width: 1000px;
-      }
+        }
       .container > hr {
         margin: 60px 0;
-      }
-    </style>
-    <link href="{{site.base_url}}/assets/css/layout.css" rel="stylesheet">
-    <link href="{{site.base_url}}/assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="{{site.base_url}}/assets/css/layout-responsive.css" rel="stylesheet">
-  
+      }     
+       
+   </style>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -51,41 +53,41 @@
                   <h1 class="logo"><a href="{{site.base_url}}/"><img src="{{site.base_url}}/assets/img/logo-small.png" alt="SupStat"></a></h1>
               </div>
 
-             <div id ="menu" class="span8 hidden-phone">
-                <ul class="menu menu-list">                            
+             <div id ="nav-list" class="span8 hidden-phone">
+                <ul id="menu">                            
                     <li class="menu-item">
                         <a href="{{site.base_url}}/">Home</a>
                     </li>
-                    <li class="menu-item parent">
+                    <li class="menu-item">
                         <a href="#">Services</a>
-                    <div><ul>                              
+                    <ul>                              
                         <li><a href="#"><span>Data Mining Solutions</span></a></li>
                         <li><a href="#"><span>Customized Statistical Tools</span></a></li>
-                    </ul></div>
+                    </ul>
                    </li>
-                   <li class="menu-item parent">
+                   <li class="menu-item">
                         <a href="#">Training</a>
-                    <div><ul>
+                    <ul>
                         <li><a href="#"><span>Online Training</span></a></li>       
                         <li><a href="#"><span>Public Workshops</span></a></li>
                         <li><a href="#"><span>Customized Training</span></a></li>
-                    </ul></div>
+                    </ul>
                    </li>
-                   <li class="menu-item parent">
+                   <li class="menu-item">
                         <a href="#">Resourse</a>
-                        <div><ul>
+                        <ul>
                         <li><a href="#"><span>Free Workshops</span></a></li>       
                         <li><a href="#"><span>Video Tutorials</span></a></li>
                         <li><a href="#"><span>White Papers</span></a></li>
-                    </ul></div>
+                    </ul>
                    </li>
                    
-                   <li class="menu-item parent">
+                   <li class="menu-item">
                         <a href="http://blog.supstat.com">Blogs</a>
-                    <div><ul>
+                    <ul>
                         <li><a href="http://blog.supstat.com"><span>English Blog</span></a></li>       
                         <li><a href="http://blog.supstat.com/cn"><span>中文博客</span></a></li>                    
-                    </ul></div>
+                    </ul>
                    </li>
                    <!--
                     <li class="menu-item">
